--- a/m0/package.json
+++ b/m0/package.json
@@ -11,18 +11,21 @@
     "@angular/platform-browser": "~2.4.0",
     "@angular/platform-browser-dynamic": "~2.4.0",
     "@angular/router": "~3.4.0",
-    "grunt": "^1.0.1",
+    "reflect-metadata": "^0.1.9",
     "rxjs": "5.0.1",
+    "systemjs": "^0.19.41",
     "zone.js": "^0.7.4"
   },
   "devDependencies": {
-    "@types/core-js": "^0.9.35",
+    "concurrently": "^3.1.0",
     "lite-server": "^2.2.2",
     "typings": "^2.1.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "lite-server"
+    "start": "tsc && concurrently \"tsc -w\" \"lite-server\" ",
+    "lite": "lite-server",
+    "tsc": "tsc",
+    "tsc:w": "tsc -w"
   },
   "keywords": [],
   "author": "",
